<resources>
    <string name="app_name">SitBit</string>

    <!--Drawer Menu Strings-->
    <string name="DRAWER_home">Home</string>
    <string name="DRAWER_goals">Goals</string>
    <string name="DRAWER_history">History</string>
    <string name="DRAWER_export">Export</string>
    <string name="DRAWER_settings">Settings</string>

    <!--Login Activity Strings-->

    <string name="LOGIN_title">SitBit Login</string>
    <string name="LOGIN_email_hint">Email</string>
    <string name="LOGIN_password_hint">Password</string>
    <string name="LOGIN_login_button_text">Login</string>
    <string name="LOGIN_register_field_text">New to SitBit? Register Here!</string>
    <string name="LOGIN_empty_field_toast">Empty Email or Password</string>
    <string name="LOGIN_invalid_credentials_toast">Invalid Login Credentials</string>
    <string name="LOGIN_failed_firebase_connection_toast">Could not connect to Firebase. Try again later.</string>

    <!--Register Activity Strings-->

    <string name="REG_title">Account Registration</string>
    <string name="REG_name_hint">Full Name</string>
    <string name="REG_email_hint">Email</string>
    <string name="REG_password_hint">Password</string>
    <string name="REG_register_button_text">Register</string>
    <string name="REG_login_field_text">Already Registered? Login Here!</string>
    <string name="REG_empty_field_toast">Empty Name, Email, or Password</string>
    <string name="REG_invalid_credentials_toast">Invalid Login Credentials</string>
    <string name="REG_failed_firebase_connection_toast">Could not connect to Firebase. Try again later.</string>

    <!--Home Fragment Strings -->
  
    <string name="HOME_today_graph_title">Today</string>
    <string name="HOME_week_graph_title">This Week</string>
    <string name="HOME_12am_text">12 AM</string>
    <string name="HOME_12pm_text">12 PM</string>
    <string name="HOME_6am_text">6 AM</string>
    <string name="HOME_6pm_text">6 PM</string>
    <string name="HOME_graph_legend"><![CDATA[ <p><font color=#800000>Sedentary</font> | <font color=#00574B>Active</font></p> ]]></string>
    <string name="HOME_recording_button_disabled_text">Start Recording</string>
    <string name="HOME_recording_button_enabled_text">Stop Recording</string>
    <string name="HOME_S_text">S</string>
    <string name="HOME_M_text">M</string>
    <string name="HOME_T_text">T</string>
    <string name="HOME_W_text">W</string>
    <string name="HOME_F_text">F</string>
    <string name="HOME_failed_firebase_connection_toast">Could not connect to Firebase. Try again later.</string>

    <!-- History Fragment Strings -->

    <string name="HISTORY_sedentary_label_text">Minutes Sedentary:</string>
    <string name="HISTORY_active_label_text">Minutes Active:</string>
    <string name="HISTORY_failed_firebase_connection_toast">Could not connect to Firebase. Try again later.</string>

    <!--Export Fragment Strings -->

    <string name="EXPORT_export_button_text">Export</string>
    <string name="EXPORT_from_text">From:</string>
    <string name="EXPORT_to_text">To:</string>
    <string name="EXPORT_failed_firebase_connection_toast">Could not connect to Firebase. Try again later.</string>
    <string name="EXPORT_unknown_error">An unknown error occurred.</string>
    <string name="EXPORT_invalid_date_interval">Invalid date interval: The 1st date must precede the 2nd.</string>

    <!--Settings Main Fragment Strings -->

    <string name="SETTINGS_MAIN_account_field_text">Account Settings</string>
    <string name="SETTINGS_MAIN_notifications_field_text">Notification Settings</string>
    <string name="SETTINGS_MAIN_logout_field_text">Log Out</string>

    <!--Settings Account Fragment Strings -->

    <string name="SETTINGS_ACC_update_password_field_text">Update Password</string>
    <string name="SETTINGS_ACC_delete_account_field_text">Delete Account</string>
    <string name="SETTINGS_ACC_failed_firebase_connection_toast">Could not connect to Firebase. Try again later.</string>

    <!--Delete Account Fragment Strings -->

    <string name="DELACC_password_hint1">Password</string>
    <string name="DELACC_password_hint2">Confirm Password</string>
    <string name="DELACC_delete_button_text">Delete Account</string>
    <string name="DELACC_emtpy_pass_toast">Password(s) empty!</string>
    <string name="DELACC_diff_pass_toast">Passwords did not match!</string>
    <string name="DELACC_failed_delete_toast">Failed to successfully delete account. Try again later.</string>
    <string name="DELACC_failed_firebase_connection_toast">Could not connect to Firebase. Try again later.</string>

    <!-- Update Password Fragment Strings -->

    <string name="UPPASS_old_password_hint1">Password</string>
    <string name="UPPASS_old_password_hint2">Confirm Password</string>
    <string name="UPPASS_new_password_hint">New Password</string>
    <string name="UPPASS_update_button_text">Update Password</string>
    <string name="UPPASS_pass_updated_toast">Password updated!</string>
    <string name="UPPASS_empty_pass_toast">Password(s) empty!</string>
    <string name="UPPASS_diff_pass_toast">Passwords did not match!</string>
    <string name="UPPASS_incorrect_pass_toast">Incorrect password!</string>
    <string name="UPPASS_failed_firebase_connection_toast">Could not connect to Firebase. Try again later.</string>

    <!-- Goals Fragment Strings -->

    <string name="GOALS_goal_label_text">Activity Goal</string>
    <string name="GOALS_progress_label_text">Goal Progress</string>
    <string name="GOALS_failed_firebase_connection_toast">Could not connect to Firebase. Try again later.</string>

    <!-- Notification Settings Strings -->

    <string name="NOTIF_notifications_switch_text">Enable Notifications:\t\t</string>
    <string name="NOTIF_failed_firebase_connection_toast">Could not connect to Firebase. Try again later.</string>


</resources>
