<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/DRAWER_home" />
        <item
            android:id="@+id/nav_goals"
            android:title="@string/DRAWER_goals" />
        <item
            android:id="@+id/nav_history"
            android:title="@string/DRAWER_history" />
        <item
            android:id="@+id/nav_export"
            android:title="@string/DRAWER_export" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/DRAWER_settings" />
    </group>

</menu>